[Fix] menu overlap

--- a/src/app/main/main.module.scss
+++ b/src/app/main/main.module.scss
@@ -2,6 +2,9 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .carouselContainer {
@@ -26,9 +29,9 @@
   height: 30.3rem;
   margin: 0 -17rem;
 
-  width: 20vw;
-  height: 24vw;
-  margin: 0 -11vw;
+  width: 17vw;
+  height: 16vw;
+  margin: 0 -9.4vw;
 
   transform: skewY(30deg);
   transition: transform 0.5s ease;
